--- a/css/styles.css
+++ b/css/styles.css
@@ -597,4 +597,13 @@ footer label {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 3rem;
 }
+
+#map {
+  width: 100%;
+  height: 400px;
+}
+
+.map {
+  background-color: #333;
+}
 /*# sourceMappingURL=styles.css.map */
