map section done

--- a/css/styles.css
+++ b/css/styles.css
@@ -603,7 +603,7 @@ footer label {
   height: 400px;
 }
 
-.map {
+.map-section {
   background-color: #333;
 }
 /*# sourceMappingURL=styles.css.map */
